<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_launcher_background"
        android:title="@string/menu_home">
    </item>

    <item android:title="Attendance">
        <menu>
            <group android:checkableBehavior="single"
                android:id="@+id/attendance">
                <item
                    android:id="@+id/nav_scanqr"
                    android:icon="@drawable/ic_menu_camera"
                    android:title= "@string/menu_scanqr" />
                <item
                    android:id="@+id/nav_makeqr"
                    android:icon="@drawable/ic_launcher_foreground"
                    android:title = "@string/menu_makeqr" />
            </group>
        </menu>
    </item>

    <item android:title="Others">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_lights"
                    android:icon="@drawable/ic_launcher_background"
                    android:title="@string/menu_lights" />

                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_launcher_background"
                    android:title= "@string/menu_logout" />
            </group>
        </menu>
    </item>

</menu>