<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.arsiwala.shamoil.astrosattendance.ui.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_scanqr"
        android:name="com.arsiwala.shamoil.astrosattendance.ui.ScanFragment"
        android:label="@string/menu_scanqr"
        tools:layout="@layout/fragment_scan" />

    <fragment
        android:id="@+id/nav_makeqr"
        android:name="com.arsiwala.shamoil.astrosattendance.ui.QRFragment"
        android:label="@string/menu_makeqr"
        tools:layout="@layout/fragment_makeqr" />

    <fragment
        android:id="@+id/nav_lights"
        android:name="com.arsiwala.shamoil.astrosattendance.ui.LightsFragment"
        android:label="Lights"
        tools:layout="@layout/fragment_lights" />
</navigation>